--- a/bank-account.html
+++ b/bank-account.html
@@ -13,7 +13,9 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>
+      IDC | Bank Account | Legal Document Clearing Services in Dubai
+    </title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +25,7 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link rel="canonical" href="https://idctyping.com/bank-account.html" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +45,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,144 +213,270 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>
+                        OPENING A
+                        <span style="color: #e67e23; font-size: 35px"
+                          >BUSINESS BANK ACCOUNT</span
+                        >
+                        IN UAE MADE EASY
+                      </h1>
+                      <p>
+                        Streamline your business's financial foundation with
+                        hassle-free solutions for opening a business bank
+                        account in the UAE.
+                      </p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
+          <div class="detail-box">
+            <small style="color: #e67e23; font-weight: bold"
+              >Bank Account</small
+            >
+            <h2 class="my-3">
+              Seamless Business Banking: Expert Guidance for Every Step
+            </h2>
+            <h6 class="text-justify text-muted">
+              In the dynamic business landscape of the UAE, securing a business
+              bank account is a crucial step for both emerging and established
+              companies. At IDC, we understand the complexities involved in this
+              essential process. Our dedicated service is designed to simplify
+              and streamline the bank account opening experience in the UAE,
+              ensuring a seamless and efficient journey for your business.
+            </h6>
           </div>
         </div>
       </div>
     </section>
 
     <!-- end service section -->
+
+    <!-- Why Choose Us -->
+
+    <section class="why_choose_us_section py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-4 col-12 mb-3 mb-lg-0">
+            <h1 class="my-3" style="color: #e67e23; font-weight: bold">
+              Why Choose Us
+            </h1>
+          </div>
+          <div class="col-lg-8 col-12">
+            <p>
+              At <span style="color: #e67e23">IDC</span>, we specialize in
+              turning your aspirations of long-term residency in the United Arab
+              Emirates into reality. Our dedicated team of experts is committed
+              to guiding you through every step of the UAE Golden Visa
+              application process, ensuring a seamless and successful journey
+              towards securing your future in one of the world's most dynamic
+              and prosperous countries.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="required_docs_section py-5">
+      <div class="container">
+        <h2 class="mb-4" style="color: #000; font-weight: 600">
+          Required Documents For
+          <span style="color: #e67e23">BUSINESS BANK ACCOUNT</span>
+        </h2>
+        <p class="text-muted mb-4">
+          There might be few more documents required depends in which bank you
+          want to open you Account. We have helped hundreds of Freezone
+          Companies to open their Freezone Company Corporate bank Accounts in
+          Following Banks.
+        </p>
+        <div class="row">
+          <div class="col-md-4">
+            <ul class="list-unstyled">
+              <li><span style="color: #e67e23">✔</span> Valid Trade License</li>
+              <li>
+                <span style="color: #e67e23">✔</span> Memorandum of Association
+              </li>
+              <li>
+                <span style="color: #e67e23">✔</span> Share Certificate (for
+                Freezone licenses)
+              </li>
+              <li>
+                <span style="color: #e67e23">✔</span> Certificate of
+                Incorporation / Formation (for Freezone licenses)
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul class="list-unstyled">
+              <li>
+                <span style="color: #e67e23">✔</span> Business Ejari (for
+                mainland licenses)
+              </li>
+              <li>
+                <span style="color: #e67e23">✔</span> Office Lease Agreement
+                (for Freezone licenses)
+              </li>
+              <li>
+                <span style="color: #e67e23">✔</span> All Shareholders Passport
+                copy
+              </li>
+              <li>
+                <span style="color: #e67e23">✔</span> All Shareholders Visa copy
+                <br /><small
+                  >(applicable if all shareholders are residents in UAE)</small
+                >
+              </li>
+              <li>
+                <span style="color: #e67e23">✔</span> All Shareholders Emirates
+                ID <br /><small
+                  >(applicable if all shareholders are residents in UAE)</small
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul class="list-unstyled">
+              <li>
+                <span style="color: #e67e23">✔</span> Proper Business Profile
+              </li>
+              <li>
+                <span style="color: #e67e23">✔</span> List of 3 Suppliers and
+                Clients
+              </li>
+              <li><span style="color: #e67e23">✔</span> Surgery</li>
+              <li>
+                <span style="color: #e67e23">✔</span> List of Countries dealing
+                with
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      style="
+        background-color: #1e7aa0;
+        color: white;
+        text-align: center;
+        padding: 60px 20px;
+      "
+    >
+      <h4 style="color: white; letter-spacing: 2px">IDC</h4>
+      <h2 style="font-size: 2.2em; font-weight: 500">
+        Why Choose <span style="color: #e67e23">IDC</span> For Opening Your
+        Business Bank Account In The UAE?
+      </h2>
+
+      <div
+        style="
+          display: flex;
+          justify-content: space-around;
+          flex-wrap: wrap;
+          margin-top: 50px;
+        "
+      >
+        <!-- Box 1 -->
+        <div style="flex: 1; min-width: 200px; max-width: 200px; padding: 20px">
+          <img
+            src="images/expertise.svg"
+            style="
+              background: white;
+              border-radius: 40%;
+              padding: 20px;
+              margin: 20px;
+            "
+            alt="Expert Guidance Icon"
+          />
+          <p style="margin-top: 15px">Expert Guidance</p>
+        </div>
+
+        <!-- Box 2 -->
+        <div style="flex: 1; min-width: 200px; max-width: 200px; padding: 20px">
+          <img
+            src="images/personalised.svg"
+            style="
+              background: white;
+              border-radius: 40%;
+              padding: 20px;
+              margin: 20px;
+            "
+            alt="Customized Banking Icon"
+          />
+          <p style="margin-top: 15px">Customized Banking Solutions</p>
+        </div>
+
+        <!-- Box 3 -->
+        <div style="flex: 1; min-width: 200px; max-width: 200px; padding: 20px">
+          <img
+            src="images/trust.svg"
+            style="
+              background: white;
+              border-radius: 40%;
+              padding: 20px;
+              margin: 20px;
+            "
+            alt="Process Icon"
+          />
+          <p style="margin-top: 15px">Seamless Process Management</p>
+        </div>
+
+        <!-- Box 4 -->
+        <div style="flex: 1; min-width: 200px; max-width: 200px; padding: 20px">
+          <img
+            src="images/support.svg"
+            style="
+              background: white;
+              border-radius: 40%;
+              padding: 20px;
+              margin: 20px;
+            "
+            alt="Compliance Icon"
+          />
+          <p style="margin-top: 15px">Compliance Mastery</p>
+        </div>
+      </div>
+
+      <button
+        class="contact-button"
+        onclick="window.location.href='contact.html'"
+      >
+        CONTACT US
+      </button>
+    </section>
 
     <!-- info section -->
 
@@ -400,7 +528,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
