--- a/ejari_service.html
+++ b/ejari_service.html
@@ -13,7 +13,9 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>
+      IDC | Ejari Services | Legal Document Clearing Services in Dubai
+    </title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +25,7 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link rel="canonical" href="https://idctyping.com/ejari_service.html" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +45,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,137 +213,151 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>FAST-TRACK YOUR EJARI REGISTRATION</h1>
+                      <p>
+                        Unlock Hassle-Free Property Leasing with Expert Ejari
+                        Solutions
+                      </p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
+          <div class="detail-box">
+            <h6>
+              Ejari is a system initiated by the Real Estate Regulatory Agency
+              (RERA) in Dubai, United Arab Emirates, aimed at regulating and
+              facilitating the rental market of Dubai. The word "Ejari" means
+              "my rent" in Arabic. This system is mandatory for all Dubai-based
+              rental or lease contracts. Its primary goal is to make the rental
+              process transparent, secure, and easy for both landlords and
+              tenants, ensuring that all rental contracts are registered with
+              the government. This registration is crucial for dispute
+              resolution and for services requiring proof of address or tenancy
+              contracts.
+            </h6>
+            <br />
+            <div style="padding: 0 30px">
+              <h4 class="my-5" style="color: #e67e23">
+                Key Services and Features of Ejari:
+              </h4>
+              <h4>Registration of Rental Agreements:</h4>
+              <p>
+                Every rental contract in Dubai must be registered through Ejari.
+                This ensures that the contract is legally binding and recognized
+                by local authorities.
+              </p>
+              <h4>Renewal and Termination of Leases:</h4>
+              <p>
+                Ejari facilitates the easy renewal and termination of lease
+                agreements, ensuring that all processes comply with local laws
+                and regulations.
+              </p>
+              <h4>Dispute Resolution:</h4>
+              <p>
+                In case of disputes between landlords and tenants, the Ejari
+                registration provides a legal basis for resolution. The system
+                is designed to protect the rights of both parties under Dubai’s
+                real estate laws.
+              </p>
+              <h4>Utility Connections:</h4>
+              <p>
+                Registration with Ejari is often a prerequisite for setting up
+                utilities such as water, electricity, and internet services in
+                rental properties.
+              </p>
+              <h4>Transparency and Security:</h4>
+              <p>
+                By standardizing rental contracts and making the details
+                accessible to relevant government bodies, Ejari increases
+                transparency in the rental market. This helps to prevent illegal
+                rental practices.
+              </p>
+              <h4 class="my-5" style="color: #e67e23">
+                How to Register for Ejari
+              </h4>
+              <h4>Prepare Required Documents:</h4>
+              <p>
+                Typically, you'll need the tenancy contract, tenant's passport
+                copy, landlord's details, the title deed of the property, and
+                recent utility bills.
+              </p>
+              <h4>Choose a Registration Method:</h4>
+              <p>
+                You can register for Ejari online through the official portal or
+                by visiting an authorized Ejari typing center with all the
+                required documents.
+              </p>
+              <h4>Pay the Fee:</h4>
+              <p>
+                Registration involves a nominal fee. This fee is subject to
+                change, so it's best to check the current rate on the official
+                Ejari website or at the typing center.
+              </p>
+              <h4>Recieve Ejari Certificate:</h4>
+              <p>
+                Once the registration is complete, you will receive an Ejari
+                certificate. This document is important for any disputes,
+                renewals, or government services requiring proof of your rental
+                agreement.
+              </p>
+              <h4 class="my-5" style="color: #e67e23">
+                Renewal and Cancellation
+              </h4>
+              <h4>Renewal:</h4>
+              <p>
+                To renew your Ejari, you must follow a similar process to the
+                initial registration, usually upon the renewal of your tenancy
+                contract.
+              </p>
+              <h4>Cancellation:</h4>
+              <p>
+                When a lease ends or is terminated, the Ejari registration for
+                that contract must be canceled to ensure that the tenant and
+                landlord are no longer legally bound by that agreement in the
+                eyes of Dubai’s real estate authorities.
+              </p>
+              <h4 class="my-5">Importance:</h4>
+              <p>
+                The importance of Ejari cannot be overstated for tenants and
+                landlords in Dubai. It ensures legal protection, helps prevent
+                fraud, and contributes to a more stable and transparent rental
+                market. Always ensure that your rental agreements are registered
+                through Ejari to avoid potential legal issues.
+              </p>
             </div>
           </div>
         </div>
@@ -349,6 +365,31 @@
     </section>
 
     <!-- end service section -->
+
+    <section
+      class="client_section"
+      style="background-color: #959499; padding: 50px 0"
+    >
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>FAST-TRACK YOUR EJARI REGISTRATION</h2>
+        </div>
+      </div>
+      <div class="container px-0">
+        <div class="text-center">
+          <p>
+            At IDC, we provide tailored Ejari registration services, ensuring a
+            smooth, efficient process for your property leasing endeavors in
+            Dubai. Our expert team navigates the complexities of Ejari
+            compliance, offering personalized support to secure your leasing
+            agreements swiftly and without hassle.
+          </p>
+          <div class="btn-box">
+            <a href="contact.html" class="contact-btn"> Contact Us Now </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- info section -->
 
@@ -400,7 +441,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
