--- a/golden_visa.html
+++ b/golden_visa.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>IDC | Golden Visa | Legal Document Clearing Services in Dubai</title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +23,7 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link rel="canonical" href="https://idctyping.com/golden_visa.html" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +43,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,144 +211,272 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>
+                        Get Your
+                        <span style="color: #e67e23; font-size: 35px"
+                          >GOLDEN VISA</span
+                        >
+                      </h1>
+                      <p>
+                        Secure your future in the UAE with our Golden Visa
+                        services.
+                      </p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
+          <div class="detail-box">
+            <small style="color: #e67e23; font-weight: bold">GOLDEN VISA</small>
+            <h2 class="my-3">
+              UAE Golden Visa: Unlocking the Door to Opportunity
+            </h2>
+            <h6 class="text-justify text-muted">
+              The United Arab Emirates Golden Visa is a prestigious residency
+              scheme designed for exceptional talents, investors, entrepreneurs,
+              scientists, outstanding students, and graduates. Offering more
+              than just a residency permit, the Golden Visa stands as a
+              testament to the UAE's commitment to nurturing talent, fostering
+              innovation, and encouraging economic diversity.
+            </h6>
           </div>
         </div>
       </div>
     </section>
 
     <!-- end service section -->
+
+    <section
+      class="client_section"
+      style="background-color: #959499; padding: 50px 0"
+    >
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>Your Bridge to the UAE Golden Visa</h2>
+        </div>
+      </div>
+      <div class="container px-0">
+        <div class="text-center">
+          <p>
+            At IDC, we specialize in turning your aspirations of long-term
+            residency in the United Arab Emirates into reality. Our dedicated
+            team of experts is committed to guiding you through every step of
+            the UAE Golden Visa application process, ensuring a seamless and
+            successful journey towards securing your future in one of the
+            world's most dynamic and prosperous countries.
+          </p>
+          <div class="btn-box">
+            <a href="contact.html" class="contact-btn"> Contact Us Now </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <h2 class="my-5">Categories and Eligibility</h2>
+        <h4 class="my-3" style="color: #e67e23">Investors</h4>
+        <p>
+          Real Estate Investors: Can obtain a visa for 5 or 10 years by
+          investing in property in the UAE. The minimum investment amount
+          varies; for a 10-year visa, it typically involves a higher investment
+          in real estate or a public investment fund. Public Investments:
+          Including investments in shares, investment funds, and other options
+          specified by the UAE government.
+        </p>
+        <h4 class="my-3" style="color: #e67e23">Entrepreneurs</h4>
+        <p>
+          Those who own or partner in a startup registered in the country in the
+          category of small and medium enterprises (SMEs), and who have a
+          successful project with a minimum capital of AED 500,000, can apply
+          for a 5-year visa.
+        </p>
+        <h4 class="my-3" style="color: #e67e23">
+          Specialized Talents and Professionals
+        </h4>
+        <p>
+          Highly skilled workers and professionals in science, engineering,
+          health, education, business management, and technology with a valid
+          employment contract in the UAE can apply, often requiring a minimum
+          educational level and salary criteria.
+        </p>
+        <h4 class="my-3" style="color: #e67e23">Scientists and Researchers</h4>
+        <p>
+          Recognized for their contribution and research in their field.
+          Eligibility often requires recommendations from recognized UAE
+          entities.
+        </p>
+        <h4 class="my-3" style="color: #e67e23">
+          Outstanding Students and Graduates
+        </h4>
+        <p>
+          Students with excellent academic performance in the UAE and abroad can
+          qualify for a 5-year visa. This includes university and high school
+          students.
+        </p>
+        <h4 class="my-3" style="color: #e67e23">Humanitarian Pioneers</h4>
+        <p>
+          Including award-winning individuals in various fields, influential
+          figures in culture and art, and other categories that the UAE
+          considers for special contributions.
+        </p>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <h2 class="my-5">Application Process</h2>
+        <p>
+          Determine Eligibility: Review the specific criteria for your category
+          to ensure eligibility.
+        </p>
+        <p>
+          Gather Required Documents: Including investments in shares, investment
+          funds, and other options specified by the UAE government.
+        </p>
+        <p>
+          Determine Eligibility: Apply through the Federal Authority for
+          Identity and Citizenship (ICA), the General Directorate of Residency
+          and Foreigners Affairs (GDRFA) in Dubai, or through officially
+          recognized real estate developers in the UAE for real estate
+          investments.
+        </p>
+        <p>
+          Application Submission: Including investments in shares, investment
+          funds, and other options specified by the UAE government.
+        </p>
+        <p>
+          Pay Fees: Application fees vary based on the visa duration and
+          category. Visa Issuance: Upon approval, the Golden Visa will be
+          issued, allowing you to enjoy the benefits of long-term residency in
+          the UAE.
+        </p>
+      </div>
+    </section>
+
+    <section
+      style="
+        background-color: #e67e23;
+        color: white;
+        text-align: center;
+        padding: 60px 20px;
+      "
+    >
+      <h4 style="color: white; letter-spacing: 2px">IDC</h4>
+      <h2 style="font-size: 2.2em; font-weight: 500">
+        Why Partner With <span style="color: #e67e23">IDC</span> For Your UAE
+        Golden Visa?
+      </h2>
+
+      <div
+        style="
+          display: flex;
+          justify-content: space-around;
+          flex-wrap: wrap;
+          margin-top: 50px;
+        "
+      >
+        <!-- Box 1 -->
+        <div style="flex: 1; min-width: 200px; max-width: 200px; padding: 20px">
+          <img
+            src="images/expertise.svg"
+            style="
+              background: white;
+              border-radius: 40%;
+              padding: 20px;
+              margin: 20px;
+            "
+            alt="Expertise Icon"
+          />
+          <p style="margin-top: 15px">Expertise In UAE Immigration Law</p>
+        </div>
+
+        <!-- Box 2 -->
+        <div style="flex: 1; min-width: 200px; max-width: 200px; padding: 20px">
+          <img
+            src="images/personalised.svg"
+            style="
+              background: white;
+              border-radius: 40%;
+              padding: 20px;
+              margin: 20px;
+            "
+            alt="Personalized Approach Icon"
+          />
+          <p style="margin-top: 15px">Personalized Approach</p>
+        </div>
+
+        <!-- Box 3 -->
+        <div style="flex: 1; min-width: 200px; max-width: 200px; padding: 20px">
+          <img
+            src="images/trust.svg"
+            style="
+              background: white;
+              border-radius: 40%;
+              padding: 20px;
+              margin: 20px;
+            "
+            alt="Transparent Process Icon"
+          />
+          <p style="margin-top: 15px">Transparent And Trustworthy Process</p>
+        </div>
+
+        <!-- Box 4 -->
+        <div style="flex: 1; min-width: 200px; max-width: 200px; padding: 20px">
+          <img
+            src="images/support.svg"
+            style="
+              background: white;
+              border-radius: 40%;
+              padding: 20px;
+              margin: 20px;
+            "
+            alt="Comprehensive Support Icon"
+          />
+          <p style="margin-top: 15px">Comprehensive Support</p>
+        </div>
+      </div>
+
+      <button
+        class="contact-button"
+        onclick="window.location.href='contact.html'"
+      >
+        CONTACT US
+      </button>
+    </section>
 
     <!-- info section -->
 
@@ -400,7 +528,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
