--- a/index.html
+++ b/index.html
@@ -68,22 +68,131 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/"
-                    >Home <span class="sr-only">(current)</span></a
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="bussinessDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
                   >
+                    Bussiness Setups
+                  </a>
+                  <div
+                    class="dropdown-menu"
+                    aria-labelledby="bussinessDropdown"
+                  >
+                    <a class="dropdown-item" href="business_setup.html"
+                      >New Business Setup</a
+                    >
+                    <a class="dropdown-item" href="license_renewal.html"
+                      >License Renewal</a
+                    >
+                    <a class="dropdown-item" href="ejari_service.html"
+                      >Ejari Services</a
+                    >
+                    <a class="dropdown-item" href="virtual_ejari_service.html"
+                      >Virtual Ejari Services</a
+                    >
+                    <a class="dropdown-item" href="trade_license.html"
+                      >Trade License</a
+                    >
+                    <a class="dropdown-item" href="vat_registration.html"
+                      >VAT Registration</a
+                    >
+                    <a class="dropdown-item" href="offshore.html">Offshore</a>
+                    <a class="dropdown-item" href="license_amendment.html"
+                      >License Amendment</a
+                    >
+                    <a class="dropdown-item" href="mainland.html">Mainland</a>
+                    <a class="dropdown-item" href="freezone.html">Freezone</a>
+                  </div>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="visaDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Visa
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="visaDropdown">
+                    <a class="dropdown-item" href="golden_visa.html"
+                      >Golden Visa</a
+                    >
+                    <a class="dropdown-item" href="employment_visa.html"
+                      >Employment Visa</a
+                    >
+                    <a class="dropdown-item" href="family_visa.html"
+                      >Family Visa</a
+                    >
+                    <a class="dropdown-item" href="visit_visa.html"
+                      >Visit Visa</a
+                    >
+                    <a class="dropdown-item" href="talent_visa.html"
+                      >Talent Visa</a
+                    >
+                    <a class="dropdown-item" href="investor_visa.html"
+                      >Investor Visa</a
+                    >
+                  </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link" href="bank-account.html">Bank Account</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
+                  <a class="nav-link" href="branding.html">Branding</a>
                 </li>
-                <!-- <li class="nav-item">
-                <a class="nav-link" href="price.html">Pricing</a>
-              </li> -->
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="servicesDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Other Services
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="servicesDropdown">
+                    <a class="dropdown-item" href="business_consulting.html"
+                      >Business Consulting</a
+                    >
+                    <a class="dropdown-item" href="flexible_workspaces.html"
+                      >Flexible Workspaces</a
+                    >
+                    <a class="dropdown-item" href="pro_services.html"
+                      >PRO Services</a
+                    >
+                    <a
+                      class="dropdown-item"
+                      href="international_driving_license.html"
+                      >International Driving License</a
+                    >
+                    <a class="dropdown-item" href="certificate_attestation.html"
+                      >Certificate Attestation</a
+                    >
+                    <a class="dropdown-item" href="company_liquidation.html"
+                      >Company Liquidation Services</a
+                    >
+                    <a class="dropdown-item" href="insurance.html">Insurance</a>
+                    <a class="dropdown-item" href="medical_typing.html"
+                      >Medical/ID Typing</a
+                    >
+                  </div>
+                </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
               <div class="quote_btn-container">
@@ -92,10 +201,10 @@
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </form> -->
-                <a href="">
+                <!-- <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span> Call : 042555355 </span>
-                </a>
+                </a> -->
               </div>
             </div>
           </nav>
@@ -121,7 +230,6 @@
                         (DED), and obtaining trade licenses.
                       </p>
                       <div class="btn-box">
-                        <a href="service.html" class="btn-1"> Read More </a>
                         <a href="contact.html" class="btn-2"> Contact Us </a>
                       </div>
                     </div>
@@ -151,7 +259,6 @@
                         and cancellation services.
                       </p>
                       <div class="btn-box">
-                        <a href="service.html" class="btn-1"> Read More </a>
                         <a href="contact.html" class="btn-2"> Contact Us </a>
                       </div>
                     </div>
@@ -182,7 +289,6 @@
                         amendments, and cancellations.
                       </p>
                       <div class="btn-box">
-                        <a href="service.html" class="btn-1"> Read More </a>
                         <a href="contact.html" class="btn-2"> Contact Us </a>
                       </div>
                     </div>
@@ -249,8 +355,8 @@
                   registration with the Department of Economic Development
                   (DED), and obtaining trade licenses.
                 </p>
-                <a href="service.html">
-                  Read More
+                <a href="contact.html">
+                  Contact Us
                   <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -269,8 +375,8 @@
                   and maid visas. This also includes visa renewal and
                   cancellation services.
                 </p>
-                <a href="service.html">
-                  Read More
+                <a href="contact.html">
+                  Contact Us
                   <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -290,8 +396,8 @@
                   documentation such as trade licenses, renewals, amendments,
                   and cancellations.
                 </p>
-                <a href="service.html">
-                  Read More
+                <a href="contact.html">
+                  Contact Us
                   <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -310,8 +416,8 @@
                   include contracts, agreements, company documents, and personal
                   documents like birth certificates and marriage certificates.
                 </p>
-                <a href="service.html">
-                  Read More
+                <a href="contact.html">
+                  Contact Us
                   <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -330,8 +436,8 @@
                   necessary for the legal recognition of documents for use in
                   the UAE.
                 </p>
-                <a href="service.html">
-                  Read More
+                <a href="contact.html">
+                  Contact Us
                   <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                 </a>
               </div>
@@ -349,8 +455,8 @@
                   advice on compliance with UAE immigration laws and
                   regulations.
                 </p>
-                <a href="service.html">
-                  Read More
+                <a href="contact.html">
+                  Contact Us
                   <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                 </a>
               </div>
