--- a/mainland.html
+++ b/mainland.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>IDC | Mainland | Legal Document Clearing Services in Dubai</title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +23,7 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link rel="canonical" href="https://idctyping.com/mainland.html" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +43,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,137 +211,105 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>YOUR GATEWAY TO MAINLAND BUSINESS SUCCESS</h1>
+                      <p>Expert Mainland Company Setup and Support Services</p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
+          <div class="detail-box">
+            <h6>
+              Embark on your business journey in the UAE's dynamic economic
+              landscape with our Mainland Company Formation services. Operating
+              a mainland company offers unparalleled access to the UAE's diverse
+              market and the freedom to do business anywhere in the UAE and
+              internationally. Our expert team provides end-to-end solutions,
+              from initial consultation to obtaining your business license,
+              ensuring a smooth setup process tailored to your business needs.
+            </h6>
+            <br />
+            <div style="padding: 0 30px">
+              <h4 class="my-5" style="color: #e67e23">Why Choose Mainland?</h4>
+              <h4>Strategic Location:</h4>
+              <p>
+                Leverage the UAE's strategic location for global business
+                expansion.
+              </p>
+              <h4>Versatile Business Opportunities:</h4>
+              <p>
+                Enjoy the flexibility to conduct business across the UAE and
+                beyond without restrictions.
+              </p>
+              <h4>Direct Local Market Access:</h4>
+              <p>
+                Directly cater to the local market, enhancing your brand
+                presence and customer engagement.
+              </p>
+              <h4>No Minimum Capital Requirement:</h4>
+              <p>
+                Benefit from the ease of setting up your business without a
+                predefined minimum capital.
+              </p>
+              <h4>Wide Range of Business Activities:</h4>
+              <p>
+                Access a broad spectrum of permissible business activities and
+                licenses on the mainland.
+              </p>
+              <h4 class="my-5" style="color: #e67e23">Our Services</h4>
+              <h4>Business Consultation:</h4>
+              <p>
+                Personalized advice to align your business vision with the right
+                strategic approach for mainland setup.
+              </p>
+              <h4>License Procurement:</h4>
+              <p>
+                Assistance with obtaining the necessary trade licenses and
+                permits for your business operation.
+              </p>
+              <h4>Legal and Regulatory Compliance:</h4>
+              <p>
+                Navigating the UAE's legal framework to ensure your business
+                complies with all regulations.
+              </p>
+              <h4>Office Solutions:</h4>
+              <p>
+                Guidance in selecting the ideal office space that meets your
+                business needs and regulatory requirements.
+              </p>
             </div>
           </div>
         </div>
@@ -349,6 +317,29 @@
     </section>
 
     <!-- end service section -->
+
+    <section
+      class="client_section"
+      style="background-color: #959499; padding: 50px 0"
+    >
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>YOUR GATEWAY TO MAINLAND BUSINESS SUCCESS</h2>
+        </div>
+      </div>
+      <div class="container px-0">
+        <div class="text-center">
+          <p>
+            At IDC, we offer unparalleled expertise in mainland company
+            formation, providing end-to-end solutions that ensure your business
+            thrives in the dynamic UAE mainland market
+          </p>
+          <div class="btn-box">
+            <a href="contact.html" class="contact-btn"> Contact Us Now </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- info section -->
 
@@ -400,7 +391,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
