--- a/trade_license.html
+++ b/trade_license.html
@@ -13,7 +13,9 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>
+      IDC | Trade License | Legal Document Clearing Services in Dubai
+    </title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +25,7 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link rel="canonical" href="https://idctyping.com/trade_license.html" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +45,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,137 +213,127 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>TRADE LICENSE SERVICES</h1>
+                      <p>
+                        Navigate Your Trade Licensing Seamlessly with IDC!<br />
+                        IDC offers comprehensive trade license services in
+                        Dubai,
+                      </p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
+          <div class="detail-box">
+            <h6>
+              A trade license is a legal document or permit issued by the
+              government or relevant authority that allows individuals or
+              businesses to engage in specific commercial activities within a
+              particular jurisdiction. The issuance of trade licenses helps
+              regulate business activities, ensure compliance with local laws
+              and regulations, and protect consumers and the public interest.
+            </h6>
+            <br />
+            <div style="padding: 0 30px">
+              <h4 class="my-5" style="color: #e67e23">
+                Here are some key points regarding trade licenses
+              </h4>
+              <h4>Purpose:</h4>
+              <p>
+                The primary purpose of a trade license is to authorize
+                individuals or businesses to conduct commercial activities
+                within a specific geographical area or jurisdiction. These
+                activities may include trading, manufacturing, retailing,
+                importing/exporting, or providing services.
+              </p>
+              <h4>Types of Trade Licenses:</h4>
+              <p>
+                The types of trade licenses available may vary depending on the
+                jurisdiction and the nature of the business activity. Common
+                types of trade licenses include commercial trade licenses,
+                professional licenses for service-based businesses, industrial
+                licenses for manufacturing activities, and tourism licenses for
+                businesses in the hospitality sector.
+              </p>
+              <h4>Application Process:</h4>
+              <p>
+                The process of obtaining a trade license typically involves
+                applying to the relevant government department or licensing
+                authority. Applicants may need to provide various documents and
+                information, such as proof of identity, business registration
+                documents, lease agreements for commercial premises, and
+                compliance with zoning and building regulations.
+              </p>
+              <h4>Regulatory Requirements:</h4>
+              <p>
+                Trade licenses are subject to regulatory requirements and
+                conditions imposed by the licensing authority. These
+                requirements may include adherence to health and safety
+                standards, environmental regulations, labor laws, and other
+                relevant regulations governing the specific type of business
+                activity.
+              </p>
+              <h4>Renewal and Compliance:</h4>
+              <p>
+                Trade licenses are usually issued for a specified period, after
+                which they need to be renewed to continue operating the business
+                legally. Renewal requirements may include payment of renewal
+                fees, submission of updated documents, and compliance with
+                ongoing regulatory obligations.
+              </p>
+              <h4>Charges:</h4>
+              <p>
+                Trade license applicants are typically required to pay
+                application fees, processing fees, and annual license fees,
+                which vary depending on the jurisdiction, type of business
+                activity, and other factors.
+              </p>
+              <h4>Penalties and Enforcement:</h4>
+              <p>
+                Non-compliance with trade license requirements or operating
+                without a valid license may result in penalties, fines, or legal
+                action by the regulatory authorities. Businesses need to
+                maintain valid trade licenses and comply with all applicable
+                laws and regulations to avoid legal consequences.Scope of
+                Operations: The scope of operations permitted under a trade
+                license may be limited to specific activities or sectors
+                authorized by the licensing authority. Businesses may need to
+                obtain additional permits or licenses for certain specialized
+                activities or regulated industries.
+              </p>
             </div>
           </div>
         </div>
@@ -349,6 +341,32 @@
     </section>
 
     <!-- end service section -->
+
+    <section
+      class="client_section"
+      style="background-color: #959499; padding: 50px 0"
+    >
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>TRADE LICENSE SERVICES</h2>
+        </div>
+      </div>
+      <div class="container px-0">
+        <div class="text-center">
+          <p>
+            At IDC, we specialize in offering comprehensive trade license
+            services, designed to navigate the complexities of business
+            registration and compliance with ease. Our dedicated team ensures a
+            smooth, streamlined process, unlocking your business's full
+            potential through expert guidance and personalized support at every
+            step.
+          </p>
+          <div class="btn-box">
+            <a href="contact.html" class="contact-btn"> Contact Us Now </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- info section -->
 
@@ -400,7 +418,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
