--- a/virtual_ejari_service.html
+++ b/virtual_ejari_service.html
@@ -13,7 +13,9 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>
+      IDC | Virtual Ejari Services | Legal Document Clearing Services in Dubai
+    </title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +25,10 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link
+      rel="canonical"
+      href="https://idctyping.com/virtual_ejari_service.html"
+    />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +48,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,137 +216,141 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>
+                        EMPOWER YOUR BUSINESS WITH
+                        <span style="color: #e67e23; font-size: 35px"
+                          >VIRTUAL EJARI</span
+                        >
+                      </h1>
+                      <p>Unlock Efficiency and Flexibility for Your Business</p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
+          <div class="detail-box">
+            <small style="color: #e67e23; font-weight: bold"
+              >Virtual Ejari Services</small
+            >
+            <h2 class="my-3">Introduction to Virtual Ejari</h2>
+            <h6>
+              Navigate the Future of Business Setup in Dubai with Our Virtual
+              Ejari Services. In the dynamic business landscape of Dubai,
+              flexibility and efficiency are key. Our Virtual Ejari setup
+              service offers a streamlined and cost-effective solution for
+              businesses looking to establish their presence in Dubai without
+              the need for a physical office space. Ideal for entrepreneurs,
+              freelancers, and remote companies, our Virtual Ejari allows you to
+              register your business and comply with local regulations, granting
+              you the legitimacy and tools to operate your business seamlessly
+              in Dubai and beyond.
+            </h6>
+            <br />
+            <div style="padding: 0 30px">
+              <h2 class="my-5">How It Works</h2>
+              <p>
+                Setting up your Virtual Ejari is a straightforward process
+                designed to get your business up and running with minimal
+                hassle. Here's how we make it happen: <b>Consultation:</b> We
+                start with a personalized consultation to understand your
+                business needs and guide you through the benefits of a Virtual
+                Ejari.
+              </p>
+              <p class="font-weight-bold">
+                Those who own or partner in a startup registered in the country
+                in the category of small and medium enterprises (SMEs), and who
+                have a successful project with a minimum capital of AED 500,000,
+                can apply for a 5-year visa.
+              </p>
+              <h5 style="color: #e67e23">
+                Specialized Talents and Professionals
+              </h5>
+              <p class="font-weight-bold">
+                Highly skilled workers and professionals in science,
+                engineering, health, education, business management, and
+                technology with a valid employment contract in the UAE can
+                apply, often requiring a minimum educational level and salary
+                criteria.
+              </p>
+              <h5 style="color: #e67e23">Scientists and Researchers</h5>
+              <p class="font-weight-bold">
+                Recognized for their contribution and research in their field.
+                Eligibility often requires recommendations from recognized UAE
+                entities.
+              </p>
+              <h5 style="color: #e67e23">Outstanding Students and Graduates</h5>
+              <p class="font-weight-bold">
+                Students with excellent academic performance in the UAE and
+                abroad can qualify for a 5-year visa. This includes university
+                and high school students.
+              </p>
+              <h5 style="color: #e67e23">Humanitarian Pioneers</h5>
+              <p class="font-weight-bold">
+                Including award-winning individuals in various fields,
+                influential figures in culture and art, and other categories
+                that the UAE considers for special contributions.
+              </p>
+              <h2 class="my-5">Application Process</h2>
+              <p>
+                <b>Determine Eligibility:</b> Review the specific criteria for
+                your category to ensure eligibility.
+              </p>
+              <p>
+                <b>Gather Required Documents:</b> Including investments in
+                shares, investment funds, and other options specified by the UAE
+                government.
+              </p>
+              <p>
+                <b>Determine Eligibility:</b> Apply through the Federal
+                Authority for Identity and Citizenship (ICA), the General
+                Directorate of Residency and Foreigners Affairs (GDRFA) in
+                Dubai, or through officially recognized real estate developers
+                in the UAE for real estate investments.
+              </p>
+              <p>
+                <b>Application Submission:</b> Including investments in shares,
+                investment funds, and other options specified by the UAE
+                government.
+              </p>
+              <p>
+                <b>Pay Fees:</b> Application fees vary based on the visa
+                duration and category. Visa Issuance: Upon approval, the Golden
+                Visa will be issued, allowing you to enjoy the benefits of
+                long-term residency in the UAE.
+              </p>
             </div>
           </div>
         </div>
@@ -349,6 +358,31 @@
     </section>
 
     <!-- end service section -->
+
+    <section
+      class="client_section"
+      style="background-color: #959499; padding: 50px 0"
+    >
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>Get Started Today</h2>
+        </div>
+      </div>
+      <div class="container px-0">
+        <div class="text-center">
+          <p>
+            Unlock the potential of your business in Dubai with our Virtual
+            Ejari setup services. Contact us today for a consultation and take
+            the first step towards a flexible, cost-effective, and compliant
+            business setup. Let us help you turn your business vision into
+            reality.
+          </p>
+          <div class="btn-box">
+            <a href="contact.html" class="contact-btn"> Contact Us Now </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- info section -->
 
@@ -400,7 +434,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
