--- a/business_consulting.html
+++ b/business_consulting.html
@@ -13,7 +13,9 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>
+      IDC | Business Consulting | Legal Document Clearing Services in Dubai
+    </title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +25,10 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link
+      rel="canonical"
+      href="https://idctyping.com/business_consulting.html"
+    />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +48,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,138 +216,82 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>STRATEGIC BUSINESS CONSULTING SERVICES</h1>
+                      <p style="color: #e67e23">
+                        Driving Growth, Innovation, and Success for Your
+                        Business
+                      </p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
+          <div class="detail-box">
+            <small style="color: #e67e23; font-weight: bold"
+              >Business Consulting
+            </small>
+            <h6 class="text-justify">
+              Business consulting services involve providing expert advice,
+              analysis, and recommendations to businesses to help them improve
+              their performance, efficiency, and profitability. Consultants
+              offer guidance in areas such as strategic planning, operational
+              optimization, market analysis, financial management, and
+              organizational development. They work closely with clients to
+              identify challenges, opportunities, and solutions tailored to
+              their specific needs and objectives.
+            </h6>
+            <h6 class="text-justify">
+              <span style="color: #e67e23">IDC</span> Services, located in the
+              dynamic business environment of the UAE, proudly offers a
+              comprehensive suite of Business Consulting Services designed to
+              empower businesses at every stage of their development. Leveraging
+              our deep understanding of the local business landscape and
+              regulatory framework, we specialize in providing tailored advice
+              and solutions that address the unique challenges and opportunities
+              businesses face in this region. From navigating the complexities
+              of business setup and licensing to offering strategic consulting
+              for business growth and optimization, our expert team is committed
+              to guiding our clients toward achieving their business objectives.
+              Our services extend to include market analysis, financial
+              planning, legal documentation clearing, and compliance, ensuring
+              that businesses not only start on a strong foundation but also
+              continue to thrive in the competitive UAE market. At IDC, we are
+              your trusted partner in unlocking the full potential of your
+              business with efficiency, integrity, and expertise.
+            </h6>
           </div>
         </div>
       </div>
@@ -400,7 +349,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
