--- a/contact.html
+++ b/contact.html
@@ -68,22 +68,131 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/"
-                    >Home <span class="sr-only">(current)</span></a
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="bussinessDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
                   >
+                    Bussiness Setups
+                  </a>
+                  <div
+                    class="dropdown-menu"
+                    aria-labelledby="bussinessDropdown"
+                  >
+                    <a class="dropdown-item" href="business_setup.html"
+                      >New Business Setup</a
+                    >
+                    <a class="dropdown-item" href="license_renewal.html"
+                      >License Renewal</a
+                    >
+                    <a class="dropdown-item" href="ejari_service.html"
+                      >Ejari Services</a
+                    >
+                    <a class="dropdown-item" href="virtual_ejari_service.html"
+                      >Virtual Ejari Services</a
+                    >
+                    <a class="dropdown-item" href="trade_license.html"
+                      >Trade License</a
+                    >
+                    <a class="dropdown-item" href="vat_registration.html"
+                      >VAT Registration</a
+                    >
+                    <a class="dropdown-item" href="offshore.html">Offshore</a>
+                    <a class="dropdown-item" href="license_amendment.html"
+                      >License Amendment</a
+                    >
+                    <a class="dropdown-item" href="mainland.html">Mainland</a>
+                    <a class="dropdown-item" href="freezone.html">Freezone</a>
+                  </div>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="visaDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Visa
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="visaDropdown">
+                    <a class="dropdown-item" href="golden_visa.html"
+                      >Golden Visa</a
+                    >
+                    <a class="dropdown-item" href="employment_visa.html"
+                      >Employment Visa</a
+                    >
+                    <a class="dropdown-item" href="family_visa.html"
+                      >Family Visa</a
+                    >
+                    <a class="dropdown-item" href="visit_visa.html"
+                      >Visit Visa</a
+                    >
+                    <a class="dropdown-item" href="talent_visa.html"
+                      >Talent Visa</a
+                    >
+                    <a class="dropdown-item" href="investor_visa.html"
+                      >Investor Visa</a
+                    >
+                  </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link" href="bank-account.html">Bank Account</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
+                  <a class="nav-link" href="branding.html">Branding</a>
                 </li>
-                <!-- <li class="nav-item">
-                <a class="nav-link" href="price.html">Pricing</a>
-              </li> -->
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="servicesDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Other Services
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="servicesDropdown">
+                    <a class="dropdown-item" href="business_consulting.html"
+                      >Business Consulting</a
+                    >
+                    <a class="dropdown-item" href="flexible_workspaces.html"
+                      >Flexible Workspaces</a
+                    >
+                    <a class="dropdown-item" href="pro_services.html"
+                      >PRO Services</a
+                    >
+                    <a
+                      class="dropdown-item"
+                      href="international_driving_license.html"
+                      >International Driving License</a
+                    >
+                    <a class="dropdown-item" href="certificate_attestation.html"
+                      >Certificate Attestation</a
+                    >
+                    <a class="dropdown-item" href="company_liquidation.html"
+                      >Company Liquidation Services</a
+                    >
+                    <a class="dropdown-item" href="insurance.html">Insurance</a>
+                    <a class="dropdown-item" href="medical_typing.html"
+                      >Medical/ID Typing</a
+                    >
+                  </div>
+                </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
               <div class="quote_btn-container">
@@ -92,10 +201,10 @@
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </form> -->
-                <a href="">
+                <!-- <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span> Call : 042555355 </span>
-                </a>
+                </a> -->
               </div>
             </div>
           </nav>
