--- a/freezone.html
+++ b/freezone.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>IDC | Freezone | Legal Document Clearing Services in Dubai</title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +23,7 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link rel="canonical" href="https://idctyping.com/freezone.html" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +43,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,137 +211,117 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>MAXIMIZE SUCCESS IN FREEZONES</h1>
+                      <p>
+                        Comprehensive Freezone Setup and Consulting Services
+                      </p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
+          <div class="detail-box">
+            <h6>
+              Unlock the potential of the UAE's Freezone regions with our
+              specialized Freezone Company Formation services. Tailored for
+              entrepreneurs and businesses seeking strategic advantages such as
+              tax exemptions, full foreign ownership, and custom duty benefits,
+              Freezones provide a supportive ecosystem for a wide array of
+              business activities. Our expert team is here to guide you through
+              every step, ensuring a seamless setup process from licensing to
+              launch.
+            </h6>
+            <br />
+            <div style="padding: 0 30px">
+              <h4 class="my-5" style="color: #e67e23">
+                Advantages of Setting Up in a Freezone
+              </h4>
+              <h4>100% Foreign Ownership:</h4>
+              <p>
+                Operate your business with full ownership, without the need for
+                a local partner.
+              </p>
+              <h4>Tax Benefits:</h4>
+              <p>
+                Enjoy zero corporate and personal taxes, enhancing your
+                profitability.
+              </p>
+              <h4>Full Repatriation of Profits and Capital:</h4>
+              <p>
+                Transfer your profits and capital back to your home country
+                without restrictions.
+              </p>
+              <h4>Strategic Locations:</h4>
+              <p>
+                Leverage the strategic locations of Freezones, often near ports
+                and airports, facilitating easy import and export.
+              </p>
+              <h4>Dedicated Support:</h4>
+              <p>
+                Access to Freezone authorities' dedicated support and
+                streamlined processes.
+              </p>
+              <h4 class="my-5" style="color: #e67e23">
+                Our Freezone Setup Services
+              </h4>
+              <h4>Strategic Consultation:</h4>
+              <p>
+                Guidance on selecting the right Freezone to match your business
+                activities and growth aspirations.
+              </p>
+              <h4>Licensing and Registration:</h4>
+              <p>
+                Comprehensive support in obtaining the necessary licenses, from
+                commercial to industrial and service licenses.
+              </p>
+              <h4>Legal Compliance:</h4>
+              <p>
+                Assistance with ensuring your business setup aligns with
+                Freezone regulations and laws..
+              </p>
+              <h4>Office and Warehouse Solutions:</h4>
+              <p>
+                Help in finding the perfect office space or warehouse that suits
+                your business requirements.
+              </p>
+              <h4>Post-Setup Support:</h4>
+              <p>
+                Continuous support including visa services, banking assistance,
+                and more, for smooth business operations.
+              </p>
             </div>
           </div>
         </div>
@@ -349,6 +329,29 @@
     </section>
 
     <!-- end service section -->
+
+    <section
+      class="client_section"
+      style="background-color: #959499; padding: 50px 0"
+    >
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>MAXIMIZE SUCCESS IN FREEZONES</h2>
+        </div>
+      </div>
+      <div class="container px-0">
+        <div class="text-center">
+          <p>
+            At IDC, we specialize in navigating the unique opportunities of
+            Freezone business setup, offering bespoke solutions that maximize
+            your operational efficiency and market potential.
+          </p>
+          <div class="btn-box">
+            <a href="contact.html" class="contact-btn"> Contact Us Now </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- info section -->
 
@@ -400,7 +403,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
