--- a/offshore.html
+++ b/offshore.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>IDC | Offshore | Legal Document Clearing Services in Dubai</title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +23,7 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link rel="canonical" href="https://idctyping.com/offshore.html" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +43,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,137 +211,96 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>NAVIGATE OFFSHORE SUCCESS WITH EASE</h1>
+                      <p>
+                        Expert Offshore Incorporation and Management Services
+                      </p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
+          <div class="detail-box">
+            <div style="padding: 0 30px">
+              <h4>Offshore Company Formation:</h4>
+              <p>
+                Offshore service providers assist individuals and businesses in
+                setting up offshore companies in jurisdictions like RAK ICC. The
+                process typically involves selecting an appropriate offshore
+                structure, preparing the necessary documentation, and
+                registering the company with the relevant authorities.
+              </p>
+              <h4>Corporate Services:</h4>
+              <p>
+                Offshore service providers offer a range of corporate services
+                to offshore companies, including company secretarial services,
+                registered office facilities, nominee services, and corporate
+                governance support.
+              </p>
+              <h4>Banking and Financial Services:</h4>
+              <p>
+                Offshore companies often require banking and financial services
+                to facilitate their operations. Offshore service providers may
+                assist in opening offshore bank accounts, obtaining lines of
+                credit, and accessing other financial services.
+              </p>
+              <h4>Tax Planning and Optimization:</h4>
+              <p>
+                One of the key benefits of offshore companies is the potential
+                for tax planning and optimization. Offshore service providers
+                help clients structure their affairs in a tax-efficient manner,
+                taking advantage of favorable tax regimes and legal frameworks.
+              </p>
+              <h4>Asset Protection:</h4>
+              <p>
+                Offshore companies are commonly used for asset protection
+                purposes, shielding assets from legal liabilities, creditor
+                claims, and other risks. Offshore service providers help clients
+                implement effective asset protection strategies tailored to
+                their specific needs and objectives.
+              </p>
+              <h4>Compliance and Regulatory Support:</h4>
+              <p>
+                Offshore service providers assist clients in navigating the
+                regulatory requirements and compliance obligations associated
+                with offshore company formation and operation. This includes
+                ensuring compliance with anti-money laundering (AML)
+                regulations, corporate governance standards, and other legal
+                requirements.
+              </p>
             </div>
           </div>
         </div>
@@ -349,6 +308,30 @@
     </section>
 
     <!-- end service section -->
+
+    <section
+      class="client_section"
+      style="background-color: #959499; padding: 50px 0"
+    >
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>NAVIGATE OFFSHORE SUCCESS WITH EASE</h2>
+        </div>
+      </div>
+      <div class="container px-0">
+        <div class="text-center">
+          <p>
+            At IDC, we provide comprehensive offshore services, guiding you
+            through the intricacies of offshore incorporation and management
+            with personalized strategies for optimal business growth and asset
+            protection.
+          </p>
+          <div class="btn-box">
+            <a href="contact.html" class="contact-btn"> Contact Us Now </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- info section -->
 
@@ -400,7 +383,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
