--- a/visit_visa.html
+++ b/visit_visa.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
 
     <!-- SEO Tags -->
-    <title>IDC | Services | Legal Document Clearing Services in Dubai</title>
+    <title>IDC | Visit Visa | Legal Document Clearing Services in Dubai</title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
@@ -23,7 +23,7 @@
       content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
     />
     <meta name="author" content="IDC Document Clearing Services" />
-    <link rel="canonical" href="https://idctyping.com/service.html" />
+    <link rel="canonical" href="https://idctyping.com/visit_visa.html" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -43,7 +43,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body class="sub_page">
+  <body>
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section">
@@ -211,144 +211,99 @@
         </div>
       </header>
       <!-- end header section -->
+
+      <!-- slider section -->
+      <section class="slider_section">
+        <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="detail-box">
+                      <h1>EXPLORE THE UAE WITH EASE</h1>
+                      <p>
+                        Discover the wonders of the UAE with our streamlined
+                        visit visa services.
+                      </p>
+                      <div class="btn-box">
+                        <a href="contact.html" class="btn-2"> Contact Us </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="row">
+                      <div class="col-lg-10 mx-auto">
+                        <div class="img-box">
+                          <img src="images/slide1.webp" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end slider section -->
     </div>
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Our Services</h2>
-        </div>
-      </div>
+    <section class="about_section layout_padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/briefcase-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Business Setup and Licensing</h4>
-                <p>
-                  Assistance with all aspects of setting up a business in UAE,
-                  including mainland, free zone, and offshore company
-                  formations. This includes advice on the legal structure,
-                  registration with the Department of Economic Development
-                  (DED), and obtaining trade licenses.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/id-card-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Visa and immigration Services</h4>
-                <p>
-                  Support with obtaining various types of visas such as
-                  employment visas, investor visas, family and dependent visas,
-                  and maid visas. This also includes visa renewal and
-                  cancellation services.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/arrows-rotate-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Renewal and Amendments</h4>
-                <p>
-                  A wide range of services to facilitate the interaction with
-                  government departments for document processing and clearance.
-                  This includes work permits, labor cards, and company
-                  documentation such as trade licenses, renewals, amendments,
-                  and cancellations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/pencil-solid.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>PRO Services</h4>
-                <p>
-                  Translation of legal documents into Arabic, which is a
-                  requirement for document processing in the UAE. This could
-                  include contracts, agreements, company documents, and personal
-                  documents like birth certificates and marriage certificates.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/file-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Legal Translation Services</h4>
-                <p>
-                  Attestation of personal and commercial documents from various
-                  departments and embassies in the UAE and abroad. This is
-                  necessary for the legal recognition of documents for use in
-                  the UAE.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/square-check-regular.svg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h4>Attestation Services</h4>
-                <p>
-                  Assistance with immigration processes and paperwork, including
-                  advice on compliance with UAE immigration laws and
-                  regulations.
-                </p>
-                <a href="contact.html">
-                  Contact Us
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
+          <div class="detail-box">
+            <h6>
+              Embarking on a journey to the UAE, whether for leisure, business,
+              or cultural exploration, should be an exciting experience from
+              start to finish. At IDC, we go above and beyond to ensure that
+              your visa application process is as seamless and stress-free as
+              possible. Our dedicated team of visa experts is well-versed in the
+              nuances of UAE visa regulations, offering personalized service to
+              match your specific travel needs. We assist with all types of
+              visit visas, meticulously handling the documentation and
+              submission process, and providing timely updates until your visa
+              is in hand. Furthermore, we offer insights into UAE travel
+              guidelines and tips to enhance your stay, ensuring that your visit
+              is not just successful, but also enriching. With IDC, you're not
+              just applying for a visa; you're setting the stage for an
+              unforgettable UAE experience, backed by our commitment to
+              excellence and your peace of mind.
+            </h6>
           </div>
         </div>
       </div>
     </section>
 
     <!-- end service section -->
+
+    <section
+      class="client_section"
+      style="background-color: #959499; padding: 50px 0"
+    >
+      <div class="container">
+        <div class="heading_container heading_center">
+          <h2>EXPLORE THE UAE WITH EASE</h2>
+        </div>
+      </div>
+      <div class="container px-0">
+        <div class="text-center">
+          <p>
+            Exploring the UAE or attending to business needs should be
+            hassle-free. IDC simplifies your travel with streamlined visit visa
+            services, making your entry into the UAE as smooth as your plans.
+            Whether you're a tourist or a business traveler, we ensure that your
+            visa application process is stress-free and hassle-free. We're here
+            to help!
+          </p>
+          <div class="btn-box">
+            <a href="contact.html" class="contact-btn"> Contact Us Now </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- info section -->
 
@@ -400,7 +355,7 @@
                   <img src="images/nav-bullet.png" alt="" />
                   About
                 </a>
-                <a class="active" href="service.html">
+                <a class="" href="service.html">
                   <img src="images/nav-bullet.png" alt="" />
                   Services
                 </a>
